# stereo_VIO_INDEMIND

./: .gitignore  .gitmodules  README.md
IMSEE-SDK/cmake/: DetectOpenCV.cmake
IMSEE-SDK/demo/: CMakeLists.txt
IMSEE-SDK/ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
IMSEE-SDK/ros/devel/share/imsee_ros_wrapper/cmake/: imsee_ros_wrapper-msg-extras.cmake  imsee_ros_wrapper-msg-paths.cmake  imsee_ros_wrapperConfig.cmake
IMSEE-SDK/ros/devel/share/roseus/ros/imsee_ros_wrapper/: manifest.l
IMSEE-SDK/ros/src/imsee_ros_wrapper/: CMakeLists.txt
IMSEE-SDK/ros/src/imsee_ros_wrapper/config/: settings.yaml
IMSEE-SDK/ros/src/imsee_ros_wrapper/launch/: start.launch
IMSEE-SDK/ros/src/imsee_ros_wrapper/rviz/: imsee.rviz
IMSEE-SDK/ros/src/imsee_ros_wrapper/src/: wrapper_nodelet.cc
ros_wrapper/src/ros_wrapper/: CMakeLists.txt  package.xml
ros_wrapper/src/ros_wrapper/src/: ROSWrapper.cpp
stereo_vio/config/indemind/: kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
